<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~   Copyright 2023 Einstein Blanco
  ~
  ~   Licensed under the GNU General Public License v3.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~       https://www.gnu.org/licenses/gpl-3.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  -->
<resources>
    <string name="app_name">Geto</string>
    <string name="apps">Apps</string>
    <string name="settings">Settings</string>
    <string name="please_grant_notifications_permission">Please grant notifications permission so you can access the revert notification</string>
    <string name="allow">Allow</string>
</resources>